Refacting, only exposing interfaces